default-configs/tenants/llm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llm-service-global
  namespace: inference
spec:
  selector:
    app: gemma-server
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: llm-service-us-central1
  annotations:
    configsync.gke.io/cluster-name-selector: gke-dev-us-central1-00
spec:
  selector:
    app: gemma-server
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: llm-service-us-east1
  annotations:
    configsync.gke.io/cluster-name-selector: gke-dev-us-east1-01
spec:
  selector:
    app: gemma-server
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
