default-configs/tenants/llm/gateway-kn.yaml
# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: v1
kind: Namespace
metadata:
  name: kourier-system
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: kn-inference-external-http
  namespace: kourier-system
spec:
  gatewayClassName: gke-l7-global-external-managed-mc
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: kn-inference-route
  namespace: kourier-system
  labels:
    gateway: kn-inference-external-http
spec:
  parentRefs:
  - name: kn-inference-external-http
    namespace: kourier-system
    sectionName: http
  rules:
  - backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: kourier-internal
      port: 80
      weight: 100
